<resources>
    <string name="app_name">Movie Catalogue</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_tab_movies">Movies</string>
    <string name="content_tab_tvshow">TV Show</string>
    <string name="tab_text_1">Movies</string>
    <string name="tab_text_2">TV Show</string>
    <string name="movies_name">Movie Title</string>
    <string name="movies_description">Movie Description</string>
    <string name="movies_photo">Movie Image</string>
    <string name="tvshow_name">TV Shows Title</string>
    <string name="tvshow_description">TV Shows Description</string>
    <string name="tvshow_photo">TV Show Image</string>
    <string name="change_language_settings">Change Language</string>

    <string-array name="data_nama_movie">
        <item>Aquaman</item>
        <item>Bohemian Rhapsody</item>
        <item>Creed II</item>
        <item>Fantastic Beasts : The Crimes of Grindelwald</item>
        <item>How To Train Your Dragon : The Hidden World</item>
        <item>Avengers : Infinity War</item>
        <item>Mortal Engines</item>
        <item>Overlord</item>
        <item>Ralph : Breaks The Internet</item>
        <item>Spider-Man : Into The Spider-Verse</item>
    </string-array>

    <string-array name="data_deskripsi_movie">
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm.</item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock and roll band Queen in 1970.</item>
        <item>Between personal obligations and training for his next big fight against an opponent with ties to his familys past, Adonis Creed is up against the challenge of his life.</item>
        <item>Gellert Grindelwald has escaped imprisonment and has begun gathering followers to his cause—elevating wizards above all non-magical beings.</item>
        <item>As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless’ discovery of an untamed, elusive mate draws the Night Fury away.</item>
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos.</item>
        <item>Many thousands of years in the future, Earth’s cities roam the globe on huge wheels, devouring each other in a struggle for ever diminishing resources.</item>
        <item>On the eve of D-Day, American paratroopers drop behind enemy lines to penetrate the walls of a fortified church and destroy a radio transmitter.</item>
        <item>Video game bad guy Ralph and fellow misfit Vanellope von Schweetz must risk it all by traveling to the World Wide Web in search of a replacement part to save Vanellopes video game, "Sugar Rush."</item>
        <item>Miles Morales is juggling his life between being a high school student and being a spider-man. When Wilson "Kingpin" Fisk uses a super collider, others from across the Spider-Verse are transported to this dimension.</item>
    </string-array>

    <string-array name="data_foto_movie">
        <item>@drawable/poster_aquaman</item>
        <item>@drawable/poster_bohemian</item>
        <item>@drawable/poster_creed</item>
        <item>@drawable/poster_crimes</item>
        <item>@drawable/poster_how_to_train</item>
        <item>@drawable/poster_infinity_war</item>
        <item>@drawable/poster_mortal_engines</item>
        <item>@drawable/poster_overlord</item>
        <item>@drawable/poster_ralph</item>
        <item>@drawable/poster_spiderman</item>
    </string-array>

    <string-array name="data_nama_tvshow">
        <item>Arrow</item>
        <item>Dragon Ball</item>
        <item>Fairy Tail</item>
        <item>Family Guy</item>
        <item>The Flash</item>
        <item>Hanna</item>
        <item>Iron Fist</item>
        <item>Naruto Shipudden</item>
        <item>Supergirl</item>
        <item>The Simpson</item>
    </string-array>

    <string-array name="data_deskripsi_tvshow">
        <item>Spoiled billionaire playboy Oliver Queen is missing and presumed dead when his yacht is lost at sea. He returns five years later a changed man, determined to clean up the city as a hooded vigilante armed with a bow.</item>
        <item>Long ago in the mountains, a fighting master known as Gohan discovered a strange boy whom he named Goku. Gohan raised him and trained Goku in martial arts until he died. The young and very strong boy was on his own, but easily managed. Then one day, Goku met a teenage girl named Bulma, whose search for the mystical Dragon Balls brought her to Gokus home. Together, they set off to find all seven and to grant her wish.</item>
        <item>Lucy is a 17-year-old girl, who wants to be a full-fledged mage. One day when visiting Harujion Town, she meets Natsu, a young man who gets sick easily by any type of transportation. But Natsu isnt just any ordinary kid, he is a member of one of the worlds most infamous mage guilds: Fairy Tail.</item>
        <item>Sick, twisted, politically incorrect and Freakin Sweet animated series featuring the adventures of the dysfunctional Griffin family. Bumbling Peter and long-suffering Lois have three kids. Stewie (a brilliant but sadistic baby bent on killing his mother and taking over the world), Meg (the oldest, and is the most unpopular girl in town) and Chris (the middle kid, he is not very bright but has a passion for movies). The final member of the family is Brian - a talking dog and much more than a pet, he keeps Stewie in check whilst sipping Martinis and sorting through his own life issues.</item>
        <item>After a particle accelerator causes a freak storm, CSI Investigator Barry Allen is struck by lightning and falls into a coma. Months later he awakens with the power of super speed, granting him the ability to move through Central City like an unseen guardian angel.</item>
        <item>This thriller and coming-of-age drama follows the journey of an extraordinary young girl as she evades the relentless pursuit of an off-book CIA agent and tries to unearth the truth behind who she is. Based on the 2011 Joe Wright film.</item>
        <item>Danny Rand resurfaces 15 years after being presumed dead. Now, with the power of the Iron Fist, he seeks to reclaim his past and fulfill his destiny.</item>
        <item>Naruto Shippuuden is the continuation of the original animated TV series Naruto.The story revolves around an older and slightly more matured Uzumaki Naruto and his quest to save his friend Uchiha Sasuke from the grips of the snake-like Shinobi, Orochimaru. After 2 and a half years Naruto finally returns to his village of Konoha, and sets about putting his ambitions to work, though it will not be easy, as He has amassed a few (more dangerous) enemies, in the likes of the shinobi organization; Akatsuki.</item>
        <item>Twenty-four-year-old Kara Zor-El, who was taken in by the Danvers family when she was 13 after being sent away from Krypton, must learn to embrace her powers after previously hiding them. The Danvers teach her to be careful with her powers, until she has to reveal them during an unexpected disaster, setting her on her journey of heroism.</item>
        <item>Set in Springfield, the average American town, the show focuses on the antics and everyday adventures of the Simpson family; Homer, Marge, Bart, Lisa and Maggie, as well as a virtual cast of thousands. Since the beginning, the series has been a pop culture icon, attracting hundreds of celebrities to guest star. The show has also made name for itself in its fearless satirical take on politics, media and American life in general.</item>
    </string-array>

    <string-array name="data_foto_tvshow">
        <item>@drawable/poster_arrow</item>
        <item>@drawable/poster_dragon_ball</item>
        <item>@drawable/poster_fairytail</item>
        <item>@drawable/poster_family_guy</item>
        <item>@drawable/poster_flash</item>
        <item>@drawable/poster_hanna</item>
        <item>@drawable/poster_iron_fist</item>
        <item>@drawable/poster_naruto_shipudden</item>
        <item>@drawable/poster_supergirl</item>
        <item>@drawable/poster_the_simpson</item>
    </string-array>
</resources>
